Added dependencies as part of upgrade to java 10 (backwards compatible with java 8)