@@ -1,4 +1,6 @@
 buildscript {
+    ext["byte-buddy.version"] = "1.8.17" // Spring boot uses version 1.7.11 but version 1.8.0+ is required for java 10 support
+
     repositories {
         maven { url "http://${nexusHost}:${nexusPort}/repository/maven-public" }
         mavenLocal()
@@ -48,10 +50,6 @@ project("thule-people-service") {
             property "sonar.cpd.exclusions", "**/domain/**"
         }
     }
-    // Required for Java9
-    //    tasks.withType(Test) {
-    //        jvmArgs += ["--add-modules", "java.xml.bind"]
-    //    }
 
     // Dependencies
     dependencyManagement {
@@ -63,6 +61,7 @@ project("thule-people-service") {
     dependencies {
         compile("uk.co.serin.thule:thule-spring-boot-starter-utils:1.0.0-SNAPSHOT")
         compile("com.googlecode.log4jdbc:log4jdbc:1.2")
+        compile("javax.xml.bind:jaxb-api") // Required by Hibernate (jaxb) when using java 9+
         compile("mysql:mysql-connector-java")
         compile("org.flywaydb:flyway-core")
         compile("org.jolokia:jolokia-core") // Required for JMX support when using the Admin server
